--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
 
     <div class="appdownload-erwei-overlay" style="display: none;">
         <div class="container">
-            <p>扫描二维码下载</p>
+            <p>免费会员影视-免费观看所有VIP视频,无充值,无会员</p>
             <img src="resources/1451458631463625.png" width="112" height="112" alt="">
         </div>
     </div>
