--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
 <div class="appdownload-wrap">
     <div class="appdownload-logo">
         <img class="appdownload-logo-icon" src="resources/icon.png" width="80" height="80">
-        <p class="appname">达人彩票</p>
+        <p class="appname">免费会员影视-享受全网VIP电影,永久不收费,不收会员</p>
     </div>
     <!--提示：页面不存在-->
     <p class="appdownload-note hidden">点击下面链接下载客户端，查看更多精彩内容!!!</p>
