--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+1<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0023)http://magapp.zxip.com/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -33,7 +33,7 @@
     <p class="appdownload-note hidden">点击下面链接下载客户端，查看更多精彩内容!!!</p>
     <!--提示：暂不支持的机型-->
     <div class="appdownload-btns" id="divDownload-ios" style="display: none;">
-        <!--<a class="btn item-ios" href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/q351941406/488679798/master/PropertyList.plist" target="_blank">-->
+        <!--<a class="btn item-ios" href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zuanqianqianapp/351941406/master/PropertyList.plist" target="_blank">-->
         <a class="btn item-ios" id="a-ios" target="_blank" onClick="my_click()">
             <span class="ico ico-ios"></span>
             <span class="txt">iPhone版</span>
